Name:               latc
Version:            0.0.2
License:            GPL-3
License-file:       COPYING
Author:             Matthew Peddie
Maintainer:         Matthew Peddie <peddie@alum.mit.edu>
Category:           Numeric
Synopsis:           Generalized interface for numerical linear algebra

Description: { LATC provides a common interface for writing numerical
  code, with a strong emphasis on linear algebra.  Many different
  backends can be used with this interface; the current version
  supports HMatrix (BLAS/LAPACK), Repa, naive lists, vectors, IntMaps
  and more.

  It uses GHC-specific features like @ConstraintKinds@ and
  @TypeFamilies@ to propagate type constraints for different backends
  to user code; the advantage is that you should be able to run the
  same piece of code using any backend you like, and if you've written
  something that a particular backend can't support, the type
  constraints will tell you what's wrong (rather than GHC requiring
  you to go back through all your code and add a bunch of constraints
  so you can use HMatrix, for example)
}

Homepage: https://github.com/peddie/latc


build-type:         Simple
cabal-version:      >= 1.8

extra-source-files: 
data-files:         

tested-with:        GHC == 7.4.2

source-repository head
  type: git
  location: git://github.com/peddie/latc.git

Library
  build-depends: base == 4.*,
                 repa == 3.2.*,
                 hmatrix == 0.14.*,
                 containers == 0.4.*,
                 vector == 0.9.*,
                 hashable  >= 1.1 && < 1.2,
                 ghc-prim,
                 QuickCheck == 2.*

  exposed-modules: Numeric.LATC, Numeric.LATC.NestedList, Numeric.LATC.NestedVector
  other-modules: 
  ghc-options: 
  ghc-prof-options: -prof -fprof-auto -fprof-cafs -rtsopts
  ghc-shared-options: -fPIC

